--- a/views/select.ejs
+++ b/views/select.ejs
@@ -3,8 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <title>Select Your Template</title>
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"><!-- load bootstrap -->
+  <style media="screen">
+    a {
+      font-size: 35px;
+    }
+  </style>
 </head>
 <body>
-  <h1><%= content %></h1>
+  <div class="jumbotron">
+    <h1 class="text-center">Select A Template To Play</h1>
+  </div>
+  <ul class="list-group">
+    <% for(var i=0; i<content.length; i++) { %>
+        <li class="list-group-item text-center">
+                <a class="bg-info" href="/play/<%= content[i]._id %>">Template <%= i+1 %></a>
+        </li>
+    <% } %>
+</ul>
 </body>
 </html>
