--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,5 +4,5 @@
 </div>  
 <ul>
   <li><a href="/create">Create</a></li>
-  <li><a href="/play">Play</a></li>
+  <li><a href="/select">Play Games</a></li>
 </ul>
