--- a/views/play.ejs
+++ b/views/play.ejs
@@ -6,6 +6,8 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script><!-- load jquery -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script><!-- load angular -->
   <script src="/javascripts/core.js"></script>
+  <script src="http://d3js.org/d3.v3.min.js"></script>
+  <script src="/javascripts/drawD3Template.js"></script>
   <title>AssocioVenture</title>
 </head>
 
