--- a/views/play.ejs
+++ b/views/play.ejs
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"><!-- load bootstrap -->
+  <link rel="stylesheet" href="/stylesheets/style.css">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script><!-- load jquery -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script><!-- load angular -->
   <script src="/javascripts/core.js"></script>
   <script src="http://d3js.org/d3.v3.min.js"></script>
-  <script src="/javascripts/drawD3Template.js"></script>
   <title>AssocioVenture</title>
 </head>
 
