--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,8 +21,8 @@
     <h1 class="text-center"><img class="img-rounded" width="50%" src="associateLogo.png" alt="logo" /></h1>
 </div>
 <ul class="list-group">
-  <a href="/create" class="list-group-item text-center list-group-item-success">Create Templates</a>
-  <a href="/select" class="list-group-item text-center list-group-item-success">Play Games</a>
-  <a href="/associations" class="list-group-item text-center list-group-item-success">See The Network</a>
+  <a href="/create" class="list-group-item text-center list-group-item-success">Create Word Chain</a>
+  <a href="/select" class="list-group-item text-center list-group-item-success">Take a Challenge</a>
+  <a href="/associations" class="list-group-item text-center list-group-item-success">View Associative Network</a>
 
 </ul>
